--- a/css/utilities.scss
+++ b/css/utilities.scss
@@ -276,15 +276,21 @@ h1 + p {
 }
 
 h2 + p,
-h2 + ul,
-h4 + p {
+h2 + ul {
   margin-top: 1em;
 }
 
-h2 + h4,
+h4 + p {
+  margin-top: 0.5em;
+}
+
+h2 + h4 {
+  margin-top: 2em;
+}
+
 p + h4,
 ul + h4 {
-  margin-top: 2em;
+  margin-top: 1em;
 }
 
 p + h2,
